--- a/MRP planer/MrpCalc.xaml
+++ b/MRP planer/MrpCalc.xaml
@@ -10,83 +10,13 @@
     xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
     mc:Ignorable="d"
     MinWidth="750" 
-    MinHeight="700">
+    MinHeight="700" 
+    RequestedTheme="Light">
     <Page.Transitions>
         <TransitionCollection>
             <EntranceThemeTransition FromVerticalOffset="0" FromHorizontalOffset="24"/>
         </TransitionCollection>
     </Page.Transitions>
-    <Page.Resources>
-        <ResourceDictionary>
-        <SolidColorBrush x:Key="AppBlue" Color="#FF0078D7" />
-        <!-- Color: FF0078D7 -->
-
-        <Style TargetType="StackPanel" x:Key="TableCellStackPanelStyle">
-            <Setter Property="BorderBrush" Value="DimGray" />
-            <Setter Property="BorderThickness" Value="0,0,1,1" />
-            <Setter Property="Padding" Value="8"/>
-            <Setter Property="Background" Value="#66F5F5F5"/>
-            <Setter Property="Orientation" Value="Horizontal"/>
-            <Setter Property="Width" Value="101"/>
-        </Style>
-
-        <Style TargetType="StackPanel" x:Key="FirstTableColumnStackPanelStyle">
-            <Setter Property="BorderBrush" Value="DimGray" />
-            <Setter Property="BorderThickness" Value="1,1,1,1" />
-            <Setter Property="Padding" Value="8"/>
-            <Setter Property="Background" Value="#66F5F5F5"/>
-            <Setter Property="Orientation" Value="Horizontal"/>
-        </Style>
-
-        <Style TargetType="StackPanel" x:Key="FirstTableRowStackPanelStyle">
-            <Setter Property="BorderBrush" Value="DimGray" />
-            <Setter Property="BorderThickness" Value="1,0,1,1" />
-            <Setter Property="Padding" Value="8"/>
-            <Setter Property="Background" Value="#66F5F5F5"/>
-            <Setter Property="Orientation" Value="Horizontal"/>
-        </Style>
-
-        <Style TargetType="TextBlock" x:Key="TableCellText">
-            <!--HorizontalAlignment="Center" Width="84" TextAlignment="Center"-->
-            <Setter Property="TextAlignment" Value="Center"/>
-            <Setter Property="Width" Value="84"/>
-        </Style>
-
-        <DataTemplate x:DataType="local:TableColumn" x:Key="TableColumnTemplate">
-            <StackPanel Orientation="Vertical" Height="260">
-                <StackPanel Style="{StaticResource TableCellStackPanelStyle}">
-                    <TextBlock Text="{Binding pe}" Style="{StaticResource TableCellText}"/>
-                </StackPanel>
-
-                <StackPanel Style="{StaticResource TableCellStackPanelStyle}">
-                    <TextBlock Text="{Binding GrossNeed}" Style="{StaticResource TableCellText}"/>
-                </StackPanel>
-
-                <StackPanel Style="{StaticResource TableCellStackPanelStyle}">
-                    <TextBlock Text="{Binding PlannedInput}" Style="{StaticResource TableCellText}"/>
-                </StackPanel>
-
-                <StackPanel Style="{StaticResource TableCellStackPanelStyle}">
-                    <TextBlock Text="{Binding AvailableQty}" Style="{StaticResource TableCellText}"/>
-                </StackPanel>
-
-                <StackPanel Style="{StaticResource TableCellStackPanelStyle}">
-                    <TextBlock Text="{Binding NetNeeds}" Style="{StaticResource TableCellText}"/>
-                </StackPanel>
-
-                <StackPanel Style="{StaticResource TableCellStackPanelStyle}">
-                    <TextBlock Text="{Binding PlannedGet}" Style="{StaticResource TableCellText}"/>
-                </StackPanel>
-
-                <StackPanel Style="{StaticResource TableCellStackPanelStyle}">
-                    <TextBlock Text="{Binding PlannedSend}" Style="{StaticResource TableCellText}"/>
-                </StackPanel>
-            </StackPanel>
-
-        </DataTemplate>
-            
-        </ResourceDictionary>
-    </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Width="Auto" Height="Auto">
         <Grid.RowDefinitions>
@@ -102,82 +32,11 @@
 
         <TextBlock Grid.Row="0" HorizontalAlignment="Left" Margin="16,0" TextWrapping="Wrap" Text="MRP tablice" VerticalAlignment="Center" Style="{StaticResource SubtitleTextBlockStyle}"/>
 
-        <ScrollViewer VerticalAlignment="Top" Grid.Row="1" Padding="32" Width="Auto" Height="Auto">
-
-            <Grid x:Name="Table01">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="200"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="60" />
-                    <RowDefinition Height="259"/>
-                </Grid.RowDefinitions>
-
-                <!-- First column -->
-
-                <StackPanel Style="{StaticResource FirstTableColumnStackPanelStyle}" Width="200">
-                    <RelativePanel Width="182">
-                        <TextBlock Text="Proizvod" HorizontalAlignment="Left" FontWeight="SemiBold" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignLeftWithPanel="True"/>
-                        <TextBlock x:Name="TxtItemLevel" Text="Razina 0" HorizontalAlignment="Left" FontSize="13" Opacity="0.6" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignRightWithPanel="True"/>
-                        <TextBlock x:Name="TxtProductName" Text="Polica za knjige" Foreground="{StaticResource AppBlue}" FontSize="14" Margin="0,2,0,0" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True" />
-                    </RelativePanel>
-                </StackPanel>
-
-                <!-- -->
-
-                <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="0" Height="260">
-                    <StackPanel Style="{StaticResource FirstTableRowStackPanelStyle}" Width="200">
-                        <RelativePanel Width="182" Background="Transparent">
-                            <TextBlock Text="Šarža" HorizontalAlignment="Left" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" />
-                            <TextBlock x:Name="TxtLotSize" Text="Minimalno 50" Margin="48,0,0,0" Foreground="{StaticResource AppBlue}" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
-                        </RelativePanel>
-                    </StackPanel>
-
-                    <StackPanel Style="{StaticResource FirstTableRowStackPanelStyle}" Width="200">
-                        <TextBlock Text="Bruto potrebe" />
-                    </StackPanel>
-
-                    <StackPanel Style="{StaticResource FirstTableRowStackPanelStyle}" Width="200">
-                        <TextBlock Text="Planirani ulazi" />
-                    </StackPanel>
-
-                    <StackPanel Style="{StaticResource FirstTableRowStackPanelStyle}" Width="200">
-                        <RelativePanel Width="182" Background="Transparent">
-                            <TextBlock Text="Raspoloživo" HorizontalAlignment="Left" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" />
-                            <TextBlock x:Name="TxtAvailable0" Text="14" Margin="48,0,0,0" Foreground="{StaticResource AppBlue}" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
-                        </RelativePanel>
-                    </StackPanel>
-
-                    <StackPanel Style="{StaticResource FirstTableRowStackPanelStyle}" Width="200">
-                        <TextBlock Text="Neto potrebe" />
-                    </StackPanel>
-                    <StackPanel Style="{StaticResource FirstTableRowStackPanelStyle}" Width="200">
-                        <TextBlock Text="Planirani primitak naloga" />
-                    </StackPanel>
-
-                    <StackPanel Style="{StaticResource FirstTableRowStackPanelStyle}" Width="200">
-                        <TextBlock Text="Planirano izdavanje naloga" />
-                    </StackPanel>
-
-                </StackPanel>
-
-                <!-- Second column -->
-
-                <RelativePanel Grid.Row="0" Grid.Column="1" Width="Auto" BorderThickness="0,1,1,1" BorderBrush="DimGray" Background="#66F5F5F5">
-                    <TextBlock Text="Period" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" />
-                </RelativePanel>
-
-
-                <StackPanel x:Name="Cols01" Orientation="Horizontal" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"/>
-
-
-            </Grid>
-
+       
+        
+        <ScrollViewer Margin="32" Width="Auto" Height="Auto" Grid.Row="1" Grid.Column="0" HorizontalScrollMode="Enabled" IsHorizontalRailEnabled="True">
+            <ItemsControl x:Name="TableItems" HorizontalContentAlignment="Left" Height="Auto" Width="Auto" />
         </ScrollViewer>
-
-      
-
     </Grid>
     
 </Page>
