--- a/MRP planer/ItemBuilder.xaml
+++ b/MRP planer/ItemBuilder.xaml
@@ -298,10 +298,10 @@
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="48" Padding="16,0,16,0" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Grid.Row="1" Grid.Column="0" Background="{ThemeResource AppBarBackground}" RequestedTheme="Dark">
             <StackPanel.RenderTransform>
-                <TranslateTransform x:Name="DeletedBanner" Y="60"/>
+                <TranslateTransform x:Name="DeletedBanner" Y="64"/>
             </StackPanel.RenderTransform>
             <TextBlock Text="Stavka je obrisana." x:Name="LblUndoMsg" VerticalAlignment="Center"/>
-            <Button Margin="96,0,0,0" Background="{StaticResource AppBlue}" Foreground="White"  VerticalAlignment="Center" Click="Button_Click">
+            <Button Margin="96,0,0,0" Background="{StaticResource AppBlue}" Foreground="White"  VerticalAlignment="Center" Click="UndoDelete">
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="13" VerticalAlignment="Center">&#xE10E;</TextBlock>
                     <TextBlock Margin="8,0,0,0">Poništi</TextBlock>
