--- a/MRP planer/ItemBuilder.xaml
+++ b/MRP planer/ItemBuilder.xaml
@@ -87,28 +87,28 @@
                 <RowDefinition Height="2.5*"/>
             </Grid.RowDefinitions>
             <StackPanel Orientation="Vertical" Width="200" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="0" Margin="0,32">
-                <TextBlock x:Name="ItemSelectedIcon" Foreground="{StaticResource AppBlue}" Text="&#xE74C;" FontFamily="Segoe MDL2 Assets" FontSize="44" VerticalAlignment="Center" HorizontalAlignment="Center" />
-                <TextBlock x:Name="ItemSelectedName" Foreground="{StaticResource AppBlue}" Text="Ime dijela" FontSize="16" VerticalAlignment="Center" Margin="0,4,0,0" HorizontalAlignment="Center" />
-                <TextBlock x:Name="ItemSelectedQty" Text="5 komad(a)" FontSize="13" VerticalAlignment="Center" Margin="0,4,0,0" HorizontalAlignment="Center" Opacity="0.6"/>
+                <TextBlock x:Name="ItemSelectedIcon" Foreground="{StaticResource AppBlue}" Text="&#xE74C;" FontFamily="Segoe MDL2 Assets" FontSize="60" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                <TextBlock x:Name="ItemSelectedName" Foreground="{StaticResource AppBlue}" Text="Ime dijela" FontSize="22" FontWeight="SemiLight"  VerticalAlignment="Center" Margin="0,4,0,0" HorizontalAlignment="Center" />
+                <TextBlock x:Name="ItemSelectedQty" Text="5 komad(a)" FontSize="14" VerticalAlignment="Center" Margin="0,4,0,0" HorizontalAlignment="Center" Opacity="0.6"/>
 
 
             </StackPanel>
 
             <StackPanel Orientation="Vertical" VerticalAlignment="Top" Grid.Row="1" HorizontalAlignment="Center" Height="Auto">
 
-                <TextBlock Text="Vrijeme dobave" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" FontWeight="SemiBold" HorizontalAlignment="Center"/>
+                <TextBlock Text="VRIJEME DOBAVE" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" FontWeight="SemiBold" HorizontalAlignment="Center"/>
                 <TextBlock x:Name="ItemSelectedAcqTime" Text="2 dana" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="14" HorizontalAlignment="Center" Margin="0" />
 
-                <TextBlock Text="Šarža" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" VerticalAlignment="Center" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,16,0,0"/>
+                <TextBlock Text="ŠARŽA" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" VerticalAlignment="Center" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,16,0,0"/>
                 <TextBlock x:Name="ItemSelectedLotSize" Text="Lot4Lot" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="14" Margin="0" HorizontalAlignment="Center" />
 
-                <TextBlock Text="Raspoloživo na skladištu" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" VerticalAlignment="Center" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,16,0,0"/>
+                <TextBlock Text="RASPOLOŽIVO NA SKLADIŠTU" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" VerticalAlignment="Center" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,16,0,0"/>
                 <TextBlock x:Name="ItemSelectedAvailable" Text="14" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="14" VerticalAlignment="Center" Margin="0" HorizontalAlignment="Center" />
 
-                <TextBlock Text="Planirani ulazi" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,16,0,0"/>
+                <TextBlock Text="PLANIRANI ULAZI" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,16,0,0"/>
                 <TextBlock x:Name="ItemSelectedPlannedInput" Text="14" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="14" HorizontalAlignment="Center" Margin="0" />
 
-                <TextBlock Text="Bruto potrebe" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" VerticalAlignment="Center" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,16,0,0"/>
+                <TextBlock Text="BRUTO POTREBE" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="12" VerticalAlignment="Center" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,4,0,0"/>
                 <TextBlock x:Name="ItemSelectedGrossReq" Text="14" Foreground="{ThemeResource ApplicationForegroundThemeBrush}" FontSize="14" HorizontalAlignment="Center" Margin="0"/>
 
             </StackPanel>
@@ -116,7 +116,7 @@
 
         <!-- AddNewItemDialog -->
 
-        <ContentDialog x:Name="CdAddNewItem" Visibility="Visible" PrimaryButtonText="Dodaj" Title="Novi dio" PrimaryButtonClick="CdAddNewItem_PrimaryButtonClick" DefaultButton="Primary" CloseButtonText="Zatvori" CloseButtonClick="CdAddNewItem_CloseButtonClick"
+        <ContentDialog x:Name="CdAddNewItem" Visibility="Visible" PrimaryButtonText="Dodaj" Title="Novi dio" PrimaryButtonClick="CdAddNewItem_PrimaryButtonClick" DefaultButton="Primary" CloseButtonText="Zatvori" Closing="CdAddNewItem_OnClosing"
                        Width="Auto" Height="Auto" Grid.Row="0" Grid.RowSpan="2" Grid.ColumnSpan="2" Grid.Column="0"
                        HorizontalAlignment="Center" MaxHeight="800" MaxWidth="900" IsPrimaryButtonEnabled="False">
             <ContentDialog.Transitions>
